--- a/wot-frontend/src/app/common/layout/wot-step-info/wot-step-info.component.scss
+++ b/wot-frontend/src/app/common/layout/wot-step-info/wot-step-info.component.scss
@@ -1,17 +1,17 @@
-.wot-step-info {
-  padding: 64px 15%;
+:host {
+  padding: 64px 15% 0 15%;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
 }
 
-.wot-step-info ::ng-deep h1,h2,h3,h4,h5,h6 {
+:host ::ng-deep h1,h2,h3,h4,h5,h6 {
   margin: 6px;
   text-align: center;
 }
 
-.wot-step-info ::ng-deep p {
+:host ::ng-deep p {
   margin: 6px;
   text-align: center;
   font-size: 1.5em;
