--- a/wot-frontend/src/app/pages/training/training.component.html
+++ b/wot-frontend/src/app/pages/training/training.component.html
@@ -9,8 +9,8 @@
     </div>
   </wot-container>
   <wot-column>
-    <h1 style="margin: 6px">Das Neuronale-Netz</h1>
-    <h3 style="margin: 0">Hinter unserem Erkennungssystem</h3>
+    <h1 style="margin: 6px; text-align: center">Das Neuronale-Netz</h1>
+    <h3 style="margin: 0; text-align: center">Hinter unserem Erkennungssystem</h3>
     <neural-net-sim #neuralNet></neural-net-sim>
   </wot-column>
   <wot-container>
