--- a/wot-frontend/src/app/common/layout/wot-column/wot-column.component.scss
+++ b/wot-frontend/src/app/common/layout/wot-column/wot-column.component.scss
@@ -1,6 +1,11 @@
-.wot-column {
+:host {
   display: inline-flex;
   justify-content: space-evenly;
   align-items: center;
   flex-direction: column;
+}
+
+.content {
+  width: fit-content;
+  margin: auto;
 }
