--- a/wot-frontend/src/app/drag-and-drop/drag-and-drop.component.scss
+++ b/wot-frontend/src/app/drag-and-drop/drag-and-drop.component.scss
@@ -1,7 +1,7 @@
 .body {
   display: flex;
   width: 1600px;
-  height: 580px;
+  height: 650px;
   flex-direction: column;
 }
 
@@ -54,6 +54,7 @@ ion-icon {
   position: absolute;
   width: 100%;
   text-align: center;
+  color: white;
   font-size: 30px;
 }
 
@@ -61,6 +62,8 @@ ion-icon {
   width: 100%;
   position: relative;
   text-align: center;
+  hyphens: auto;
+  color: white;
   margin-left: auto;
   margin-right: auto;
   margin-top: 0px;
