--- a/wot-frontend/src/app/pages/data-grouping/data-grouping.component.html
+++ b/wot-frontend/src/app/pages/data-grouping/data-grouping.component.html
@@ -7,9 +7,11 @@
       Nun geht es darum zu definieren, wie ihr in Missionen mit Objekten umgehen wollt, die euch begegnen. Überlegt dabei ganz genau welche Aktionen für die Objekte sinnvoll sind, damit das Truck-Raumschiff nicht beschädigt wird, aber für die Mission wichtige Objekte eingesammelt werden.
     </p>
   </wot-step-info>
-  <wot-row>
-    <app-drag-and-drop [data]="images" [labels]="labels" #dragDrop></app-drag-and-drop>
-  </wot-row>
+  <wot-content>
+    <wot-row>
+      <drag-and-drop [data]="images" [labels]="labels" #dragDrop></drag-and-drop>
+    </wot-row>
+  </wot-content>
   <wot-row>
     <wot-button slot="right" [disabled]="dragDrop.dragObjects.length > 0" (press)="done(dragDrop)">Schritt abschließen</wot-button>
   </wot-row>
