--- a/wot-frontend/src/app/pages/data-labeling/data-labeling.component.html
+++ b/wot-frontend/src/app/pages/data-labeling/data-labeling.component.html
@@ -7,9 +7,11 @@
       Um die Objekte zuordnen zu können, ist es nun wichtig diesen eine Kategorie zuzuweisen. Sortiert dafür die Objekte in die untenstehenden Ordner ein.
     </p>
   </wot-step-info>
-  <wot-row>
-    <app-drag-and-drop [data]="images" [labels]="labels" #dragDrop></app-drag-and-drop>
-  </wot-row>
+  <wot-content>
+    <wot-row>
+      <drag-and-drop [data]="images" [labels]="labels" #dragDrop></drag-and-drop>
+    </wot-row>
+  </wot-content>
   <wot-row>
     <wot-button slot="right" [disabled]="dragDrop.dragObjects.length > 0" (press)="done(dragDrop)">Schritt abschließen</wot-button>
   </wot-row>
