texte super weg

--- a/wot-frontend/src/app/pages/data-creation/data-creation.component.html
+++ b/wot-frontend/src/app/pages/data-creation/data-creation.component.html
@@ -39,5 +39,5 @@
 </wot-page>
 
 <wot-success-overlay (continue)="continue()" #successOverlay>
-  Super! Mit den von euch gezeichneten Bildern habt ihr den vorliegenden Datensatz erweitert. Das hilft der KI dabei, ein größeres Spektrum von Objektvarianten zu erkennen.
+  Mit den von euch gezeichneten Bildern habt ihr den vorliegenden Datensatz erweitert. Das hilft der KI dabei, ein größeres Spektrum von Objektvarianten zu erkennen.
 </wot-success-overlay>
