--- a/wot-frontend/src/app/pages/data-labeling/data-labeling.component.html
+++ b/wot-frontend/src/app/pages/data-labeling/data-labeling.component.html
@@ -18,5 +18,5 @@
 </wot-page>
 
 <wot-success-overlay (continue)="continue()" #successOverlay>
-  Super! Ihr habt den Objektzeichnungen eine Kategorie zugewiesen. Die KI kann nun darauf trainiert werden Zeichnungen einer Kategorie zuzuordnen.
+  Ihr habt den Objektzeichnungen eine Kategorie zugewiesen. Die KI kann nun darauf trainiert werden Zeichnungen einer Kategorie zuzuordnen.
 </wot-success-overlay>
