--- a/wot-frontend/src/app/pages/credits/credits.component.scss
+++ b/wot-frontend/src/app/pages/credits/credits.component.scss
@@ -86,12 +86,22 @@ $scroll-duration: 60s;
 }
 
 .feedback {
-	position: absolute;
+	position: fixed;
     top: 50%;
-    right: 0;
+    right: 100px;
     transform: translateY(-50%);
 	opacity: 1;
 	z-index: 2;
+}
+
+.white-b {
+    position: relative;
+    top: 5px;
+    left: 60px;
+    background-color: white;
+    width: 380px;
+    height: 390px;
+    z-index: 1;
 }
 
 .end-btn {
