added dhbw logo

--- a/wot-frontend/src/app/pages/landing/landing.component.html
+++ b/wot-frontend/src/app/pages/landing/landing.component.html
@@ -1,6 +1,9 @@
 <div class="landing-page">
-  <img width="600" src="assets/game/spacetruck.png">
-  <div class="success-info">
+  <div class="landing-logos">
+    <img width="600" src="assets/game/spacetruck.png">
+    <img width="280" src="assets/credits/dhbw-karlsruhe.png">
+  </div>
+  <div class="landing-info">
     <h1>Machine Learning</h1>
     <wot-row>
       <p>
