--- a/wot-frontend/src/app/pages/landing/landing.component.scss
+++ b/wot-frontend/src/app/pages/landing/landing.component.scss
@@ -4,10 +4,18 @@
   height: 100%;
   top: 0;
   left: 0;
+
   display: flex;
   justify-content: space-evenly;
   align-items: center;
   flex-direction: row;
+}
+
+.landing-logos {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 32px;
 }
 
 .landing-page ::ng-deep h1,h2,h3,h4,h5,h6 {
@@ -19,6 +27,6 @@
   font-size: 1.5em;
 }
 
-.success-info {
+.landing-info {
   width: 50%;
 }
