--- a/wot-frontend/src/app/pages/landing/landing.component.html
+++ b/wot-frontend/src/app/pages/landing/landing.component.html
@@ -1,7 +1,7 @@
 <div class="landing-page">
   <div class="landing-logos">
     <img width="600" src="assets/game/spacetruck.png">
-    <img width="280" src="assets/credits/dhbw-karlsruhe.png">
+    <img width="260" src="assets/credits/DHBW_d_KA_46mm_4c.svg">
   </div>
   <div class="landing-info">
     <h1>Machine Learning</h1>
