update in game texts

--- a/wot-frontend/src/app/pages/data-grouping/data-grouping.component.html
+++ b/wot-frontend/src/app/pages/data-grouping/data-grouping.component.html
@@ -17,6 +17,6 @@
   </wot-row>
 </wot-page>
 
-<wot-success-overlay buttonLabel="Misson starten" (continue)="continue()" #successOverlay>
+<wot-success-overlay buttonLabel="Mission starten" (continue)="continue()" #successOverlay>
   Nun kann der Truck anhand der durch das Erkennungssystem klassifizierten Objekte auf diese reagieren. Die Mission kann nun beginnen.
 </wot-success-overlay>
