texte die unendlichste

--- a/wot-frontend/src/app/pages/analytics/analytics.component.html
+++ b/wot-frontend/src/app/pages/analytics/analytics.component.html
@@ -32,7 +32,7 @@
               </td>
             </tr>
           </table>
-          Du hast das Objekt als <span [style.color]="selectedColor" >{{selectedImage.label}}</span> klassifiziert.
+          Ihr habt das Objekt als <span [style.color]="selectedColor" >{{selectedImage.label}}</span> klassifiziert.
         </div>
       </div>
     </wot-row>
