--- a/wot-frontend/src/app/pages/training/training.component.html
+++ b/wot-frontend/src/app/pages/training/training.component.html
@@ -43,5 +43,5 @@
 </div>
 
 <wot-success-overlay (continue)="continue()" #successOverlay>
-  Wir haben unser erstes Neuronales Netz trainiert! Nun müssen wir unserem Abwehrsystem noch mitteilen, wie es mit den erkannten Objekten umgehen soll.
+  Ihr habt euer erstes Neuronales Netz trainiert! Nun müssen müsst Ihr dem Abwehrsystem noch mitteilen, wie es mit den erkannten Objekten umgehen soll.
 </wot-success-overlay>
