--- a/wot-frontend/src/app/pages/game/game.component.html
+++ b/wot-frontend/src/app/pages/game/game.component.html
@@ -1,3 +1,6 @@
+<div class="game-progress-bar" *ngIf="gamestatus===0">
+    <wot-progress-bar height="20px" width="100%" background="auto" [progress]="35-survivedObjects" [total]="35"></wot-progress-bar>
+</div>
 <nebula></nebula>
 <canvas id="canvas" #canvas></canvas>
 <div class="bottomright drawingCanvas" *ngIf="gamestatus===0" #canvasContainer>
