--- a/wot-frontend/src/app/pages/game/game.component.scss
+++ b/wot-frontend/src/app/pages/game/game.component.scss
@@ -25,3 +25,12 @@
   transform: translate(-50%, -50%);
   margin: 0 auto;
 }
+
+.game-progress-bar {
+  position: fixed;
+  top: 0;
+  background-color: black;
+  height: 20px;
+  width: 100%;
+  z-index: 2;
+}
