--- a/wot-frontend/src/app/pages/data-grouping/data-grouping.component.html
+++ b/wot-frontend/src/app/pages/data-grouping/data-grouping.component.html
@@ -18,5 +18,7 @@
 </wot-page>
 
 <wot-success-overlay buttonLabel="Mission starten" (continue)="continue()" #successOverlay>
-  Nun kann der Truck anhand der durch das Erkennungssystem klassifizierten Objekte auf diese reagieren. Die Mission kann nun beginnen.
+  <div>Nun kann der Truck anhand der durch das Erkennungssystem klassifizierten Objekte auf diese reagieren.</div>
+  <br>
+  <div>Startet nun die Mission und seht zu, wie sich euer Erkennungssystem schlägt. Auf den Truck werden verschiedene Objekte zufliegen, die jeweils mit dem von euch trainierten Erkennungssystem analysiert werden. Unten rechts könnt ihr außerdem selbst Objekte zeichnen, um den Truck damit zu testen.</div>
 </wot-success-overlay>
