--- a/wot-frontend/src/app/drag-and-drop/drag-and-drop.component.html
+++ b/wot-frontend/src/app/drag-and-drop/drag-and-drop.component.html
@@ -20,7 +20,7 @@
         <div class="icon-count">
           <ion-icon name="arrow-undo" class="btn-icon"></ion-icon>
         </div>
-        <p class="p-label">Zurück</p>
+        <p class="p-label">Rückgängig</p>
       </div>
     </wot-button>
   </div>
