--- a/wot-frontend/src/app/drag-and-drop/drag-and-drop.component.html
+++ b/wot-frontend/src/app/drag-and-drop/drag-and-drop.component.html
@@ -15,7 +15,7 @@
       <p class="p-label">{{class.labelName === 'Satellitenschüssel' ? 'Satelliten-schüssel' : class.labelName}}</p>
     </div>
 
-    <wot-button [disabled]="lastIndex===0" class="undo-btn" (press)="undo()">
+    <wot-button [disabled]="lastIndices.length===0" class="undo-btn" (press)="undo()">
       <div class="undo-div">
         <div class="icon-count">
           <ion-icon name="arrow-undo" class="btn-icon"></ion-icon>
