--- a/wot-frontend/src/app/common/layout/wot-success-overlay/wot-success-overlay.component.html
+++ b/wot-frontend/src/app/common/layout/wot-success-overlay/wot-success-overlay.component.html
@@ -1,5 +1,5 @@
 <div class="wot-overlay" *ngIf="visible">
-  <div class="success-checkmark">
+  <div *ngIf="showIcon" class="success-checkmark">
     <div class="check-icon">
       <span class="icon-line line-tip"></span>
       <span class="icon-line line-long"></span>
@@ -8,7 +8,7 @@
     </div>
   </div>
   <div class="success-info">
-    <h1>Bravo!</h1>
+    <h1>{{header}}</h1>
     <wot-row>
       <p><ng-content></ng-content></p>
     </wot-row>
