--- a/wot-frontend/src/app/pages/credits/credits.component.html
+++ b/wot-frontend/src/app/pages/credits/credits.component.html
@@ -1,4 +1,3 @@
-
 <div class="page">
 
     <div class="title">
@@ -9,13 +8,20 @@
 
         <div class="titlecontent">
 
-            <div class="center header">Mission <span *ngIf="win">erfolgreich!!!</span><span *ngIf="!win">gescheitert!</span></div>
+            <div class="center header">Mission <span *ngIf="win">erfolgreich!!!</span><span
+                    *ngIf="!win">gescheitert!</span></div>
 
-            <div><span *ngIf="win">Ihr habt es geschafft</span><span *ngIf="!win">Da ist etwas bei der Entwicklung des Erkennungssystems schief gegangen und der Truck wurde schwer beschädigt</span>. Wir hoffen ihr hattet <span *ngIf="!win">trotzdem</span> Spaß und konntet etwas zum Thema Machine Learning lernen.</div>
+            <div><span *ngIf="win">Ihr habt es geschafft</span><span *ngIf="!win">Da ist etwas bei der Entwicklung des
+                    Erkennungssystems schiefgegangen und der Truck wurde schwer beschädigt</span>. Wir hoffen, ihr
+                hattet <span *ngIf="!win">trotzdem</span> Spaß und konntet etwas zum Thema Machine Learning lernen.
+            </div>
 
-            <div>Scannt bitte jetzt den nebenstehenden QR-Code mit einem Smartphone. Bitte füllt den Feedbackbogen aus, um uns bei unserem Projekt zu unterstützen. Danke!</div>
+            <div>Scannt bitte jetzt den nebenstehenden QR-Code mit einem Smartphone. Bitte füllt den Feedbackbogen aus,
+                um uns bei unserem Projekt zu unterstützen. Danke!</div>
 
-            <div>Wir, die Entwickler Luca Adams, Leonhard Stengel und Rico Rauschkolb, bedanken uns bei Dominik, Felicitas und Marie für die Unterstützung bei der Umsetzung. Des Weiteren danken wir den fleißigen Zeichnern Ian, Jan, Yannic, Konrad und allen die wir vergessen haben.</div>
+            <div>Wir, die Entwickler Luca Adams, Leonhard Stengel und Rico Rauschkolb, bedanken uns bei Dominik,
+                Felicitas und Marie für die Unterstützung bei der Umsetzung. Außerdem danken wir den fleißigen Zeichnern
+                Ian, Jan, Yannic, Konrad und allen, die wir vergessen haben.</div>
 
 
             <div class="center"><img width="500px" src="assets/credits/dhbw-logo.jpg"></div>
