--- a/wot-frontend/src/app/pages/landing/landing.component.html
+++ b/wot-frontend/src/app/pages/landing/landing.component.html
@@ -7,17 +7,22 @@
     <h1>Machine Learning</h1>
     <wot-row>
       <p>
-        Herzlich Willkommen an der Station zu Machine Learning. Jetzt dürft ihr selbst ausprobieren, was hinter dem Begriff „maschinelles Lernen“ steckt.
+        Herzlich willkommen an der Station zu Machine Learning. Jetzt dürft ihr selbst ausprobieren, was hinter dem
+        Begriff „maschinelles Lernen“ steckt..
       </p>
       <p>
-        Nach den neusten Umbauten am Truck kann dieser auch durch das Weltall fliegen. Zu den Umbauten zählen Düsenantriebe sowie ein Erkennungssystem für Objekte, die im Weltall umherfliegen.
+        Nach den neuesten Umbauten am Truck kann dieser auch durch das Weltall fliegen. Zu den Umbauten zählen
+        Düsenantriebe sowie ein Erkennungssystem für Objekte, die im Weltall umherfliegen.
       </p>
       <p>
-        Nun soll der Truck auf Erkundungstour gehen, um neue Welten zu entdecken. Das Problem ist, dass das Erkennungssystem bis jetzt noch nicht zwischen verschiedenen Objekten unterscheiden kann. Unterstützt die Truck-Besatzung, die künstliche Intelligenz des Erkennungssystem zu trainieren, um mögliche Gefahren abzuwenden und eine sichere Mission zu gewährleisten!
+        Nun soll der Truck auf Erkundungstour gehen, um neue Welten zu entdecken. Das Problem ist, dass das
+        Erkennungssystem bis jetzt noch nicht zwischen verschiedenen Objekten unterscheiden kann. Helft der
+        Truck-Besatzung, die Mission sicher durchzuführen, indem ihr die Künstliche Intelligenz des Erkennungssystems
+        trainiert!
       </p>
     </wot-row>
     <wot-row>
-      <wot-button (press)="continue()">Lasst uns beginnen!</wot-button>
+      <wot-button (press)="continue()">LASST UNS BEGINNEN!</wot-button>
     </wot-row>
   </div>
 </div>
