--- a/wot-frontend/src/app/app.component.html
+++ b/wot-frontend/src/app/app.component.html
@@ -1,7 +1,7 @@
 <router-outlet></router-outlet>
 <wot-button *ngIf="router.url != '/landing'" icon="close" (press)="confirmRestart()" class="close-btn"></wot-button>
 <div class="confirm-overlay" *ngIf="showResetOverlay">
-    <span class="confirm-overlay-text">Willst du wirklich abbrechen?</span>
+    <span class="confirm-overlay-text">Wollt ihr wirklich abbrechen?</span>
     <wot-button (press)="restart()" class="confirm-btn">Ja</wot-button>
     <wot-button (press)="decline()" class="confirm-btn">Nein</wot-button>
 </div>
