--- a/wot-frontend/src/app/pages/game/gameover-overlay/gameover-overlay.component.html
+++ b/wot-frontend/src/app/pages/game/gameover-overlay/gameover-overlay.component.html
@@ -1,11 +1,15 @@
 <div class="wot-overlay">
   <div class="glitch">
-    <h1 class="gameover-title" [textContent]="win ? 'Victory' : 'Defeat'" [ngStyle]="{'color': win ? 'var(--color-success)' : 'var(--color-danger)'}">
+    <h1 class="gameover-title" [textContent]="win ? 'VICTORY' : 'DEFEAT'"
+      [ngStyle]="{'color': win ? 'var(--color-success)' : 'var(--color-danger)'}">
     </h1>
   </div>
   <p *ngIf="!win" class="gameover-info">Die Mission ist gescheitert.</p>
-  <p *ngIf="win" class="gameover-info">Der Truck hat die Mission erfolgreich abgeschlossen.</p>
-  <p class="gameover-info">Ihr könnt nun erneut versuchen ein Erkennungssystem zu trainieren. Überlegt dabei bei welchem Schritt ihr neu einsteigen möchtet. Ihr könnt das Spiel auch über die Auswertung beenden.</p>
+  <p *ngIf="!win" class="gameover-info">Ihr könnt nun das Erkennungssystem erneut trainieren. Überlegt dabei, bei
+    welchem Schritt ihr einsteigen möchtet. Ihr könnt das Spiel auch über die Auswertung beenden.</p>
+  <p *ngIf="win" class="gameover-info">Der Truck hat die Mission erfolgreich abgeschlossen!</p>
+  <p *ngIf="win" class="gameover-info">Nun könnt ihr in der Auswertung noch überprüfen, wofür die von euch gezeichneten
+    Bilder von der KI gehalten wurden.</p>
   <wot-row>
     <wot-button routerLink="/data-overview">Nochmal komplett neu versuchen</wot-button>
   </wot-row>
