--- a/wot-frontend/src/app/pages/training/training.component.html
+++ b/wot-frontend/src/app/pages/training/training.component.html
@@ -3,30 +3,33 @@
     <div class="container img" [@.disabled]="epoch > 10">
       <div class="image-inner-container" [@imageAnimation]="{value: images, params: {time: this.delayFactor*0.1}}">
         <span *ngFor="let image of images; let i=index;">
-            <img class="img-data" src="{{image.imagePath}}" [@colorAnimation]="ratings[i]"/>
+          <img class="img-data" src="{{image.imagePath}}" [@colorAnimation]="ratings[i]" />
         </span>
       </div>
     </div>
   </wot-container>
   <wot-column>
-    <h1 style="margin: 6px; text-align: center">Unser Neuronale Netz.</h1>
-    <h3 style="margin: 0; text-align: center">Schaut dabei zu, wie es trainiert wird</h3>
+    <h1 style="margin: 6px; text-align: center">Unser Neuronales Netz</h1>
+    <h3 style="margin: 0; text-align: center">Schaut dabei zu, wie es trainiert wird!</h3>
     <neural-net-sim #neuralNet></neural-net-sim>
   </wot-column>
   <wot-container>
     <div class="container">
       <wot-row>
-        <wot-progress-bar height="24px" width="400px" [label]="'Epoche '+this.epoch+'/1000'" [progress]="this.epoch" [total]="1000" [animationSpeed]="1000*delayFactor"></wot-progress-bar>
+        <wot-progress-bar height="24px" width="400px" [label]="'Epoche '+this.epoch+'/1000'" [progress]="this.epoch"
+          [total]="1000" [animationSpeed]="1000*delayFactor"></wot-progress-bar>
       </wot-row>
       <wot-row>
-        <wot-progress-bar height="24px" width="400px" [label]="getStepLabel()" [progress]="this.step" [total]="5" [animationSpeed]="1000*delayFactor"></wot-progress-bar>
+        <wot-progress-bar height="24px" width="400px" [label]="getStepLabel()" [progress]="this.step" [total]="5"
+          [animationSpeed]="1000*delayFactor"></wot-progress-bar>
       </wot-row>
       <wot-row>
         <div class="info-text" *ngIf="stage >= 2">
-<!--          <p *ngIf="stage === 2">HINWEIS: Das Training des Modells ist rechenintensiv und entsprechend sehr langsam. Daher beschleunigen wir das Ganze jetzt.</p>-->
-<!--          <p *ngIf="stage > 2 && epoch <= 200">Beschleunigung: {{2/delayFactor}}x</p>-->
+          <!--          <p *ngIf="stage === 2">HINWEIS: Das Training des Modells ist rechenintensiv und entsprechend sehr langsam. Daher beschleunigen wir das Ganze jetzt.</p>-->
+          <!--          <p *ngIf="stage > 2 && epoch <= 200">Beschleunigung: {{2/delayFactor}}x</p>-->
           <p *ngIf="epoch > 3">
-            HINWEIS: Das Training des Modells ist rechenintensiv und entsprechend sehr langsam. Daher beschleunigen wir das Ganze jetzt.<br><br>
+            HINWEIS: Das Training des Modells ist rechenintensiv und deswegen sehr langsam. Daher beschleunigen wir das
+            Ganze jetzt.<br><br>
             Beschleunigung: HYPERSPEED
           </p>
         </div>
@@ -36,9 +39,10 @@
           <h2>Genauigkeit: {{accuracy | number: '1.0-2'}} %</h2>
         </wot-row>
         <wot-row>
-<!--          <wot-button slot="fill" (press)="startTraining()" [disabled]="stage != 0" *ngIf="stage < 2">Training Starten</wot-button>-->
-<!--          <wot-button slot="fill" (press)="startTraining()" [disabled]="stage != 2" *ngIf="stage >= 2 && stage < 4">Training Fortsetzen</wot-button>-->
-          <wot-button slot="fill" (press)="successOverlay.setVisible()" *ngIf="stage >= 4">Training Abschließen</wot-button>
+          <!--          <wot-button slot="fill" (press)="startTraining()" [disabled]="stage != 0" *ngIf="stage < 2">Training Starten</wot-button>-->
+          <!--          <wot-button slot="fill" (press)="startTraining()" [disabled]="stage != 2" *ngIf="stage >= 2 && stage < 4">TRAINING FORTSETZEN</wot-button>-->
+          <wot-button slot="fill" (press)="successOverlay.setVisible()" *ngIf="stage >= 4">TRAINING ABSCHLIESSEN
+          </wot-button>
         </wot-row>
       </div>
     </div>
@@ -46,5 +50,7 @@
 </div>
 
 <wot-success-overlay (continue)="continue()" #successOverlay>
-  Ihr habt euer erstes Neuronales Netz trainiert! Nun müssen müsst Ihr dem Abwehrsystem noch mitteilen, wie es mit den erkannten Objekten umgehen soll.
+  Bravo!
+  Ihr habt euer erstes Neuronales Netz trainiert. Nun müsst ihr dem Abwehrsystem noch sagen, was es mit den erkannten
+  Objekten tun soll.
 </wot-success-overlay>
